RESOLVED FIXED 274475
REGRESSION (278960@main?): [ MacOS iOS ] 8X imported/w3c/web-platform-tests/navigation-api are consistently failing and 1 is crashing
https://bugs.webkit.org/show_bug.cgi?id=274475
Summary REGRESSION (278960@main?): [ MacOS iOS ] 8X imported/w3c/web-platform-tests/n...
Jay Stfleur
Reported 2024-05-21 10:44:54 PDT
Created attachment 471464 [details] text Diffs Description: imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/001.html imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-anchor-download-userInitiated.html imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-anchor-download.html imported/w3c/web-platform-tests/navigation-api/navigate-event/signal-abort-detach-in-onnavigate.html imported/w3c/web-platform-tests/navigation-api/navigation-history-entry/current-basic.html imported/w3c/web-platform-tests/navigation-api/navigation-history-entry/entries-after-navigations-in-multiple-windows.html imported/w3c/web-platform-tests/navigation-api/navigation-history-entry/key-id-location-replace-cross-origin.html imported/w3c/web-platform-tests/navigation-api/navigation-methods/return-value/navigate-detach-in-onnavigate.html imported/w3c/web-platform-tests/navigation-api/navigation-methods/sandboxing-navigate-parent.html 8 of those tests are consistently failing while imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/001.html is crashing. imported/w3c/web-platform-tests/navigation-api/navigation-methods/return-value/navigate-detach-in-onnavigate.html and imported/w3c/web-platform-tests/navigation-api/navigate-event/signal-abort-detach-in-onnavigate.html progressed from crashing to failing after changes on 278960@main Buildbot URL: https://build.webkit.org/#/builders/947/builds/3857 History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fbrowsers%2Fhistory%2Fthe-history-interface%2F001.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigate-event%2Fnavigate-anchor-download-userInitiated.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigate-event%2Fnavigate-anchor-download.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigate-event%2Fsignal-abort-detach-in-onnavigate.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigation-history-entry%2Fcurrent-basic.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigation-history-entry%2Fentries-after-navigations-in-multiple-windows.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigation-history-entry%2Fkey-id-location-replace-cross-origin.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigation-methods%2Freturn-value%2Fnavigate-detach-in-onnavigate.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigation-methods%2Fsandboxing-navigate-parent.html Diff/Image Diff/Crash Log: imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/001.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libsystem_kernel.dylib 0x19664aa60 __pthread_kill + 8 1 libsystem_pthread.dylib 0x196682c00 pthread_kill + 288 (/AppleInternal/Library/BuildRoots/dd2d0f2c-0437-11ef-9f18-a65dcee5a99e/Library/Caches/com.apple.xbs/Sources/libpthread/src/pthread.c:1721) 2 libsystem_c.dylib 0x19658fa30 abort + 180 (/AppleInternal/Library/BuildRoots/dd2d0f2c-0437-11ef-9f18-a65dcee5a99e/Library/Caches/com.apple.xbs/Sources/Libc/stdlib/FreeBSD/abort.c:118) 3 WebCore 0x11878c228 WebCore::Navigation::updateForNavigation(WTF::Ref<WebCore::HistoryItem, WTF::RawPtrTraits<WebCore::HistoryItem>, WTF::DefaultRefDerefTraits<WebCore::HistoryItem>>&&, WebCore::NavigationNavigationType) + 2576 4 WebCore 0x118615098 WebCore::FrameLoader::loadInSameDocument(WTF::URL, WTF::RefPtr<WebCore::SerializedScriptValue, WTF::RawPtrTraits<WebCore::SerializedScriptValue>, WTF::DefaultRefDerefTraits<WebCore::SerializedScriptValue>>, WebCore::SecurityOrigin const*, bool, WebCore::NavigationHistoryBehavior) + 2296 5 WebCore 0x11861fe84 WebCore::FrameLoader::continueFragmentScrollAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::SecurityOrigin const*, bool, WebCore::NavigationHistoryBehavior) + 196 6 WebCore 0x118651de0 WTF::Detail::CallableWrapper<WebCore::PolicyChecker::checkNavigationPolicy(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WebCore::DocumentLoader*, WTF::RefPtr<WebCore::FormState, WTF::RawPtrTraits<WebCore::FormState>, WTF::DefaultRefDerefTraits<WebCore::FormState>>&&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>>&&, WebCore::NavigationPolicyDecision)>&&, WebCore::PolicyDecisionMode)::$_1, void, WebCore::PolicyAction>::call(WebCore::PolicyAction) + 424 7 WebKit 0x10600cf9c WebKit::WebFrame::didReceivePolicyDecision(unsigned long long, WebKit::PolicyDecision&&) + 716 8 WebKit 0x105fc7cd0 WebKit::WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction(WebCore::NavigationAction const&, WebCore::ResourceRequest const&, WebCore::ResourceResponse const&, WebCore::FormState*, WTF::String const&, unsigned long long, std::__1::optional<WebCore::HitTestResult>&&, bool, int, WebCore::PolicyDecisionMode, WTF::CompletionHandler<void (WebCore::PolicyAction)>&&) + 948 9 WebCore 0x118647a68 WebCore::PolicyChecker::checkNavigationPolicy(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WebCore::DocumentLoader*, WTF::RefPtr<WebCore::FormState, WTF::RawPtrTraits<WebCore::FormState>, WTF::DefaultRefDerefTraits<WebCore::FormState>>&&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>>&&, WebCore::NavigationPolicyDecision)>&&, WebCore::PolicyDecisionMode) + 2120 10 WebCore 0x118613024 WebCore::FrameLoader::loadURL(WebCore::FrameLoadRequest&&, WTF::String const&, WebCore::FrameLoadType, WebCore::Event*, WTF::RefPtr<WebCore::FormState, WTF::RawPtrTraits<WebCore::FormState>, WTF::DefaultRefDerefTraits<WebCore::FormState>>&&, std::__1::optional<WebCore::PrivateClickMeasurement>&&, WTF::CompletionHandler<void ()>&&) + 2216 11 WebCore 0x11860e318 WebCore::FrameLoader::loadFrameRequest(WebCore::FrameLoadRequest&&, WebCore::Event*, WTF::RefPtr<WebCore::FormState, WTF::RawPtrTraits<WebCore::FormState>, WTF::DefaultRefDerefTraits<WebCore::FormState>>&&, std::__1::optional<WebCore::PrivateClickMeasurement>&&) + 832 12 WebCore 0x11860de24 WebCore::FrameLoader::changeLocation(WebCore::FrameLoadRequest&&, WebCore::Event*, std::__1::optional<WebCore::PrivateClickMeasurement>&&) + 460 13 WebCore 0x11863e97c WebCore::NavigationScheduler::scheduleLocationChange(WebCore::Document&, WebCore::SecurityOrigin&, WTF::URL const&, WTF::String const&, WebCore::LockHistory, WebCore::LockBackForwardList, WebCore::NavigationHistoryBehavior, WTF::CompletionHandler<void (WebCore::ScheduleLocationChangeResult)>&&) + 1164 14 WebCore 0x118751cb0 WebCore::LocalDOMWindow::setLocation(WebCore::LocalDOMWindow&, WTF::URL const&, WebCore::NavigationHistoryBehavior, WebCore::SetLocationLocking) + 684 15 WebCore 0x11878500c WebCore::Location::setLocation(WebCore::LocalDOMWindow&, WebCore::LocalDOMWindow&, WTF::String const&) + 364
Attachments
text Diffs (7.55 KB, application/zip)
2024-05-21 10:44 PDT, Jay Stfleur
no flags
Radar WebKit Bug Importer
Comment 1 2024-05-21 10:45:23 PDT
EWS
Comment 2 2024-05-21 11:27:35 PDT
Test gardening commit 279067@main (387b783606c4): <https://commits.webkit.org/279067@main> Reviewed commits have been landed. Closing PR #28861 and removing active labels.
Alex Christensen
Comment 3 2024-05-21 12:58:19 PDT
EWS
Comment 4 2024-05-21 13:46:13 PDT
Committed 279073@main (5461787f10d0): <https://commits.webkit.org/279073@main> Reviewed commits have been landed. Closing PR #28865 and removing active labels.
Alexey Proskuryakov
Comment 5 2024-05-22 11:12:03 PDT
Skipped tests remain, should we track those in bugs?
Alex Christensen
Comment 6 2024-05-22 11:35:07 PDT
Active work is being done and those working on it have been informed that they need to keep the bots greener than they have. The feature is off by default. Many skipped tests and failing tests exist and they are being worked through actively. No bugs need to be filed for those.
Note You need to log in before you can comment on or make changes to this bug.